test/files/neg/t11042.check
t11042.scala:9: error: incompatible type in overriding
def get: Int (defined in trait Base)
  with override def get: Any (defined in trait SubBase);
 found   : => Any
 required: => Int
class Hi extends Base[Int] with SubBase
      ^
one error found
